force-app/main/default/objects/Course_Subject__c/Course_Subject__c.object-meta.xml
<CustomObject>
    <label>Course Subject</label>
    <nameField>
        <displayFormat>CoSu-{0000}</displayFormat>
        <label>Course Subject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>