force-app/main/default/objects/Course_Subject__c/fields/Subject_Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>Subject_Estimated_Days__c</fullName>
    <formula>Subject__r.Estimated_Completion_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Estimated Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>