force-app/main/default/objects/Course_Subject__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <label>Weighting</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>